Fixed wrapping, works on all screen sizes

--- a/static/styles/css/main.css
+++ b/static/styles/css/main.css
@@ -73,10 +73,3 @@ body h1 {
     float: left;
     width: 33.33%;
 }
-
-.vert-align {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-}
